5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1807_2567.log
== TEST (2019-06-12 17:46:03) 
-- CODE:
from numpy import *
 vet= array(eval(input("figura:")))
soma	
while (vet[i] <= 4 and vet[i] == 0):
	for i in range(size(vet)):
		vet= vet[i] - 1
print(vet)
-- ERROR:
File "XXXX", line 2
    vet= array(eval(input()))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 17:46:46) 
-- CODE:
from numpy import *
vet= array(eval(input("figura:")))
soma	
while (vet[i] <= 4 and vet[i] == 0):
	for i in range(size(vet)):
		vet= vet[i] - 1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 17:47:08) 
-- CODE:
from numpy import *
vet= array(eval(input("figura:")))

while (vet[i] <= 4 and vet[i] == 0):
	for i in range(size(vet)):
		vet= vet[i] - 1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 17:47:34) 
-- CODE:
from numpy import *
vet= array(eval(input("figura:")))
i=0
while (vet[i] <= 4 and vet[i] == 0):
	for i in range(size(vet)):
		vet= vet[i] - 1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 17:47:53) 
-- CODE:
from numpy import *
vet= array(eval(input("figura:")))
i=0
while (vet[i] <= 4 and vet[i] == 0):
	for i in range(size(vet)):
		vet= vet[i] - 1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 17:57:47) 
-- CODE:
from numpy import *
vet= array(eval(input("figura:")))
i=0
while (vet[i] <= 4 and vet[i] == 0):
	for i in range(size(vet)):
		vet= vet[i] - 1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 17:58:13) 
-- CODE:
from numpy import *
vet= array(eval(input("figura:")))
i=0
while (vet[i] <= 4 and vet[i] == 0):
	for i in range(size(vet)):
		vet= vet[i] - 1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:06:12) 
-- CODE:
from numpy import *
vet= array(eval(input("figura:")))
vetor= zeros(5, dtype=float)
i=4
while (vet[i] <= 4 and vet[i] == 0):
	for i in range(size(vet)):
		vetor[i] = vetor[i] - 1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:06:36) 
-- CODE:
from numpy import *
vet= array(eval(input("figura:")))
vetor= zeros(5, dtype=float)
i=4
while (vet[i] <= 4 and vet[i] == 0):
	for i in range(size(vet)):
		vetor[i] = vetor[i] - 1
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:06:55) 
-- CODE:
from numpy import *
vet= array(eval(input("figura:")))
vetor= zeros(5, dtype=float)
i=4
while (vet[i] <= 4 and vet[i] == 0):
	for i in range(size(vet)):
		vetor[i] = vetor[i] - 1
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:08:08) 
-- CODE:
from numpy import *
vet= array(eval(input("figura:")))
vetor= zeros(5, dtype=float)
i=4
while (vet[i] <= 4 and vet[i] == 0):
	for i in range(size(vet)):
		vetor[i] = vetor[i] - 1
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:08:46) 
-- CODE:
from numpy import *
vet= array(eval(input("figura:")))
vetor= zeros(5, dtype=float)
i=4
while (vet[i] <= 4 and vet[i] == 0):
	for i in range(size(vet)):
		vetor[i] = vetor[i] - 1
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:14:46) 
-- CODE:
from numpy import *
vet= array(eval(input("figura:")))
vetor= zeros(5, dtype=float)
i=4
while (vet[i] <= 4 and vet[i] == 0):
	for i in range(size(vet)):
		vetor[i] = vetor[i] - 1
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:15:13) 
-- CODE:
from numpy import *
vet= array(eval(input("figura:")))
vetor= zeros(5, dtype=float)
i=4
while (vetor[i] <= 4 and vetor[i] == 0):
	for i in range(size(vet)):
		vetor[i] = vetor[i] - 1
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:15:53) 
-- CODE:
from numpy import *
vet= array(eval(float(input("figura:")))
vetor= zeros(5, dtype=float)
i=4
while (vet[i] <= 4 ):
	for i in range(size(vet)):
		vet[i] = vet[i] - 1
print(vetor)
-- ERROR:
File "XXXX", line 3
    vetor= zeros(5, dtype=float)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:16:01) 
-- CODE:
from numpy import *
vet= array(eval(float(input("figura:")))

i=4
while (vet[i] <= 4 ):
	for i in range(size(vet)):
		vet[i] = vet[i] - 1
print(vetor)
-- ERROR:
File "XXXX", line 4
    i=4
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:16:23) 
-- CODE:
from numpy import *
vet= array(eval(float(input("figura:")))

while (vet[i] <= 4 ):
	for i in range(size(vet)):
		vet[i] = vet[i] - 1
print(vet)
-- ERROR:
File "XXXX", line 4
    while (vet[i] <= 4 ):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
